Add Introduction and Login Design

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,31 @@
 <resources>
+
+    <!--  Public String -->
     <string name="app_name">Chronotes</string>
+
+    <!--  Main Slider Fragment String -->
+    <string name="main_slider_fragment_title">Title Here</string>
+    <string name="main_slider_fragment_description">Description Here</string>
+    <string name="main_slider_fragment_next">Next</string>
+    <string name="main_slider_fragment_skip">Skip</string>
+    <string name="main_slider_fragment_continue">Continue</string>
+    <string name="main_slider_fragment_icon_description">Icon Description</string>
+    <string name="main_slider_fragment_title_welcome">Welcome to Chronotes</string>
+    <string name="main_slider_fragment_title_calendar">Calendar</string>
+    <string name="main_slider_fragment_title_notes">Notes</string>
+    <string name="main_slider_fragment_title_reminders">Reminders</string>
+    <string name="main_slider_fragment_description_welcome">Description Welcome</string>
+    <string name="main_slider_fragment_description_calendar">Description Calendar</string>
+    <string name="main_slider_fragment_description_notes">Description Notes</string>
+    <string name="main_slider_fragment_description_reminders">Description Reminders</string>
+
+    <!-- Login String -->
+    <string name="login_icon_placeholder">Icon</string>
+    <string name="login_email_placeholder">Email</string>
+    <string name="login_password_placeholder">Password</string>
+    <string name="login_button">Login</string>
+    <string name="login_forgot_password">FORGOT PASSWORD</string>
+    <string name="login_or">or</string>
+    <string name="login_register">REGISTER HERE</string>
+
 </resources>
