--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,6 +59,8 @@
     <string name="menu_home">Home</string>
     <string name="menu_notes">Notes</string>
     <string name="menu_calendar">Calendar</string>
+    <string name="menu_setting">Setting</string>
+    <string name="menu_sign_out">Sign Out</string>
 
     <string name="home_second">Home Second</string>
 
