--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,15 @@
     <string name="main_slider_fragment_description_notes">Description Notes</string>
     <string name="main_slider_fragment_description_reminders">Description Reminders</string>
 
+    <!-- Profile String -->
+    <string name="profile_icon_placeholder">Icon</string>
+    <string name="profile_id_placeholder">ID</string>
+    <string name="profile_name_placeholder">Name</string>
+    <string name="profile_email_placeholder">Email</string>
+    <string name="profile_password_placeholder">Password</string>
+    <string name="profile_button">Update</string>
+    <string name="profile_logout_button">Log Out</string>
+
     <!-- Login String -->
     <string name="login_icon_placeholder">Icon</string>
     <string name="login_email_placeholder">Email</string>
@@ -60,7 +69,6 @@
     <string name="menu_notes">Notes</string>
     <string name="menu_calendar">Calendar</string>
     <string name="menu_setting">Setting</string>
-    <string name="menu_sign_out">Sign Out</string>
 
     <string name="home_second">Home Second</string>
 
