--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,7 +34,7 @@
     <string name="profile_id_placeholder">ID</string>
     <string name="profile_name_placeholder">Name</string>
     <string name="profile_email_placeholder">Email</string>
-    <string name="profile_password_placeholder">Password</string>
+    <string name="profile_password_placeholder">Confirm Password</string>
     <string name="profile_button">Update</string>
     <string name="profile_logout_button">Log Out</string>
 
