--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -4,50 +4,31 @@
     <!--  Public String -->
     <string name="app_name">Chronotes</string>
 
-    <!-- Fragment -->
-    <string name="title_activity_calendar">calendar</string>
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
-
     <!--  Main Slider Fragment String -->
-    <string name="main_slider_fragment_title">Title Here</string>
-    <string name="main_slider_fragment_description">Description Here</string>
-    <string name="main_slider_fragment_next">Next</string>
-    <string name="main_slider_fragment_skip">Skip</string>
-    <string name="main_slider_fragment_continue">Continue</string>
-    <string name="main_slider_fragment_icon_description">Icon Description</string>
-    <string name="main_slider_fragment_title_welcome">Welcome to Chronotes</string>
-    <string name="main_slider_fragment_title_calendar">Calendar</string>
-    <string name="main_slider_fragment_title_notes">Notes</string>
-    <string name="main_slider_fragment_title_reminders">Reminders</string>
-    <string name="main_slider_fragment_description_welcome">See how many Chronotes can help you stay organized and get more done on your job</string>
-    <string name="main_slider_fragment_description_calendar">Manage your time effectively and make sure nothing slips away</string>
-    <string name="main_slider_fragment_description_notes">Description Notes</string>
-    <string name="main_slider_fragment_description_reminders">Description Reminders</string>
-
-    <!-- Profile String -->
-    <string name="profile_icon_placeholder">Icon</string>
-    <string name="profile_id_placeholder">ID</string>
-    <string name="profile_name_placeholder">Name</string>
-    <string name="profile_email_placeholder">Email</string>
-    <string name="profile_password_placeholder">Confirm Password</string>
-    <string name="profile_button">Update</string>
-    <string name="profile_logout_button">Log Out</string>
+    <string name="main_slider_fragment_title">Judul</string>
+    <string name="main_slider_fragment_description">Deskripsi</string>
+    <string name="main_slider_fragment_icon_description">Deskripsi Gambar</string>
+    <string name="main_slider_fragment_next">Lanjut</string>
+    <string name="main_slider_fragment_skip">Lewati</string>
+    <string name="main_slider_fragment_continue">Masuk</string>
+    <string name="main_slider_fragment_title_welcome">Selamat datang di Chronotes</string>
+    <string name="main_slider_fragment_title_calendar">Kalendar</string>
+    <string name="main_slider_fragment_title_notes">Catatan</string>
+    <string name="main_slider_fragment_title_reminders">Pengingat</string>
+    <string name="main_slider_fragment_description_welcome">Lihat bagaimana Chronotes dapat membantu agar tugas kamu dapat terorganisir</string>
+    <string name="main_slider_fragment_description_calendar">Atur waktumu secara lebih efektif agar tidak terbuang secara sia-sia</string>
+    <string name="main_slider_fragment_description_notes">Catat semua yang penting agar tidak terlupakan</string>
+    <string name="main_slider_fragment_description_reminders">Lakukan aktivitasmu tanpa takut ada yang terlewatkan</string>
 
     <!-- Login String -->
-    <string name="login_icon_placeholder">Icon</string>
-    <string name="login_email_placeholder">Email</string>
-    <string name="login_password_placeholder">Password</string>
-    <string name="login_button">Login</string>
-    <string name="login_forgot_password">Forgot your password ?</string>
-    <string name="login_continue_with">Continue With</string>
-    <string name="login_register">Register Now</string>
-    <string name="login_remember_me">Remember Me</string>
-    <string name="login_dont_have_an_account">Don\'t Have an Account ?</string>
+    <string name="login_layout_icon_placeholder">Icon</string>
+    <string name="login_layout_email_placeholder">Email</string>
+    <string name="login_layout_password_placeholder">Kata sandi</string>
+    <string name="login_layout_remember_me">Remember me</string>
+    <string name="login_layout_button">Masuk</string>
+    <string name="login_layout_dont_have_an_account">Tidak punya akun ?</string>
+    <string name="login_layout_register">DAFTAR SEKARANG</string>
+    <string name="login_layout_continue_with">Lanjutkan dengan</string>
 
     <!-- Login Message String -->
     <string name="login_message_success">Berhasil login !</string>
@@ -59,26 +40,21 @@
     <string name="login_message_offline">Anda sedang tidak terhubung dengan internet. Silahkan nyalakan data seluler !</string>
 
     <!-- Register String -->
-    <string name="register_icon_placeholder">Icon</string>
-    <string name="register_name_placeholder">Name</string>
-    <string name="register_email_placeholder">Email</string>
-    <string name="register_password_placeholder">Password</string>
-    <string name="register_button">Register</string>
-    <string name="register_already_have_account">Already Have Account ?</string>
-    <string name="register_login">Back to Login</string>
+    <string name="register_layout_icon_placeholder">Gambar</string>
+    <string name="register_layout_name_placeholder">Nama</string>
+    <string name="register_layout_email_placeholder">Email</string>
+    <string name="register_layout_password_placeholder">Kata sandi</string>
+    <string name="register_layout_button">Daftar</string>
+    <string name="register_layout_already_have_account">Sudah punya akun ?</string>
+    <string name="register_layout_login">Kembali ke Login</string>
 
-    <!-- Home String -->
-    <string name="title_activity_home">HomeActivity</string>
-
-    <string name="nav_header_title">Name</string>
-    <string name="nav_header_subtitle">email@android.com</string>
-    <string name="action_settings">Settings</string>
-
-    <string name="menu_home">Home</string>
-    <string name="menu_notes">Notes</string>
-    <string name="menu_calendar">Calendar</string>
-    <string name="menu_setting">Setting</string>
-
-    <string name="home_second">Home Second</string>
+    <!-- Register Message String -->
+    <string name="register_message_success">Berhasil daftar !</string>
+    <string name="register_message_failed">Gagal daftar !</string>
+    <string name="register_message_empty_field">Kolom tidak boleh kosong !</string>
+    <string name="register_message_exist_email">Email yang sudah terdaftar !</string>
+    <string name="register_message_wrong_email">Format email salah !</string>
+    <string name="register_message_wrong_password">Format kata sandi salah !</string>
+    <string name="register_message_offline">Anda sedang tidak terhubung dengan internet. Silahkan nyalakan data seluler !</string>
 
 </resources>
