--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,26 +57,32 @@
     <string name="register_message_offline">You are offline. Please connect to the internet !</string>
 
     <!-- Home String -->
-    <string name="title_activity_home">HomeActivity</string>
-
     <string name="nav_header_title">Name</string>
     <string name="nav_header_subtitle">email@android.com</string>
-    <string name="action_settings">Settings</string>
-
     <string name="menu_home">Home</string>
     <string name="menu_notes">Notes</string>
     <string name="menu_calendar">Calendar</string>
     <string name="menu_setting">Setting</string>
 
-    <string name="home_second">Home Second</string>
+    <!-- Home Message String -->
+    <string name="home_message_error_load_data">Failed to load data. Please check your internet connection.</string>
+    <string name="home_message_error_load_image">Failed to load image. Please check your internet connection.</string>
 
     <!-- Profile String -->
-    <string name="profile_icon_placeholder">Icon</string>
-    <string name="profile_id_placeholder">ID</string>
-    <string name="profile_name_placeholder">Name</string>
-    <string name="profile_email_placeholder">Email</string>
-    <string name="profile_password_placeholder">Confirm Password</string>
-    <string name="profile_button">Update</string>
-    <string name="profile_logout_button">Log Out</string>
+    <string name="profile_layout_icon_placeholder">Icon</string>
+    <string name="profile_layout_name_placeholder">Name</string>
+    <string name="profile_layout_password_placeholder">Confirm Password</string>
+    <string name="profile_layout_update_button">Update</string>
+    <string name="profile_layout_logout_button">Log Out</string>
+
+    <!-- Profile Message String -->
+    <string name="profile_message_success">Update success !</string>
+    <string name="profile_message_failed">Update failed !</string>
+    <string name="profile_message_error_load_data">Failed to load data. Please check your internet connection.</string>
+    <string name="profile_message_invalid">Invalid password combination !</string>
+    <string name="profile_message_empty_field">Please fill all field !</string>
+    <string name="profile_message_wrong_password">Invalid password format !</string>
+    <string name="profile_message_offline">You are offline. Please connect to the internet !</string>
+    <string name="profile_message_invalid_extension">Invalid photo extension</string>
 
 </resources>
